@@ -1,3 +1,12 @@
+2008-08-09  Christian Franke  <franke@computer.org>
+
+	* Makefile.in: Add `target_os' and `enable_grub_pe2elf'.
+	* conf/common.rmk: Install `grub-pe2elf' only if requested.
+	Install `grub.d/10_windows' only on Cygwin.
+	* configure.ac: Add subst of `target_os'.
+	Check `target_os' also before setting TARGET_OBJ2ELF.
+	Add `--enable-grub-pe2elf'.
+
 2008-08-08  Robert Millan  <rmh@aybabtu.com>
 
 	* kern/disk.c: Replace `<grub/machine/time.h>' with `<grub/time.h>'.
